# ricardo-goncalo-thesis-project

./: .gitignore  .pre-commit-config.yaml  README.md  setup.ipynb
project/: README.md  pyproject.toml  setup.py  setup_notebook.ipynb
project/automarl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project/automl/: __init__.py  _version.py  component.py  component_designer.py  consts.py  evaluator_component.py  json_component_utils.py  logger_component.py  schema.py
project/automl/base_configurations/: base_configurations.py  basic_dqn.py  basic_ppo.py  basic_rl.py
project/automl/basic_components/: EventfulComponent.py  artifact_management.py  component_group.py  dynamic_value.py  evaluator_component.py  evaluator_of_group.py  exec_component.py  loop_components.py  sampler.py  seeded_component.py  state_management.py  stateful_component_loder.py
project/automl/cli/: execute_component.py  load_and_profile_component.py  load_run_component.py
project/automl/core/: advanced_component_creation.py  advanced_input_management.py  advanced_input_utils.py  artifact_management.py  exceptions.py  global_class_registry.py  input_management.py  localizations.py  state_management.py  types.py
project/automl/fundamentals/: acessories.py
project/automl/hp_opt/: hp_optimization_pipeline.py  hp_optimization_pipeline_with_groups.py  hyperparameter_suggestion.py  hyperparameter_suggestions_generator.py
project/automl/loggers/: component_with_results.py  global_logger.py  logger_component.py  result_logger.py
project/automl/rl/: memory_components.py  (+4 more)
project/logger/: Log.py
(+442 files in other folders)
